change .env settings

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
+MONGO_DB_URL=mongodb+srv://igor:babilonio@cluster0.zu3esg8.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
 DB_USER=igor
 DB_PASS=babilonio
